<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="hospital.linde.uk.apphubandroid.LocationActivity">

    <TextView
        android:id="@+id/hospital_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/select_location" />

    <ListView
        android:id="@+id/list"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice"
        android:layout_width="match_parent">
    </ListView>

    <LinearLayout
        android:id="@+id/row_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textStyle="bold" />

        <Button
            android:id="@+id/next"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
